--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,4 @@
+
 .text-box {
   background-color: rgba(50, 100, 150, 0.8);
   position: fixed;
@@ -6,4 +7,18 @@
   top: 50%;
   transform: translateX(-50%) translateY(-50%);
   /* transform: translateY(-50%); */
+  transition: height 3s;
+  text-align: center;
+}
+
+.gif-img {
+  padding: 20px;
+  margin: 10px;
+  border: brown;
+  border-style: double;
+}
+
+.para-container {
+  margin: 0;
+  left: 0;
 }
