--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,19 @@
 
 .text-box {
   background-color: rgba(50, 100, 150, 0.8);
-  position: fixed;
+  position: relative;
+  border-radius: 20px;
+  left: 50%;
+  top: 50%;
+  transform: translateX(-50%) translateY(-50%);
+  /* transform: translateY(-50%); */
+  transition: height 3s;
+  text-align: center;
+}
+
+.options-box {
+  background-color: rgba(50, 100, 150, 0.8);
+  position: relative;
   border-radius: 20px;
   left: 50%;
   top: 50%;
