--- a/src/index.css
+++ b/src/index.css
@@ -22,3 +22,15 @@
   margin: 0;
   left: 0;
 }
+
+.gif-btn {
+  margin-bottom: 10px;
+}
+
+#gif-form {
+  margin-top: 20px;
+}
+
+.scroll-banner {
+  background-color: red;
+}
