--- a/src/index.css
+++ b/src/index.css
@@ -1,36 +1,39 @@
 
-.text-box {
-  background-color: rgba(50, 100, 150, 0.8);
-  position: relative;
+.gif-box {
+  position: fixed;
   border-radius: 20px;
   left: 50%;
-  top: 50%;
+  top: 35%;
   transform: translateX(-50%) translateY(-50%);
   /* transform: translateY(-50%); */
-  transition: height 3s;
+  /* transition: height 3s; */
   text-align: center;
 }
 
 .options-box {
-  background-color: rgba(50, 100, 150, 0.8);
-  position: relative;
+  position: fixed;
   border-radius: 20px;
   left: 50%;
   top: 50%;
   transform: translateX(-50%) translateY(-50%);
   /* transform: translateY(-50%); */
-  transition: height 3s;
+  /* transition: height 3s; */
   text-align: center;
 }
 
+.box-bg {
+  background: rgb(0,232,255);
+  background: linear-gradient(155deg, rgba(0,232,255,0.5046219171262255) 0%, rgba(255,125,2,0.4962185557816877) 100%); 
+}
 .gif-img {
   padding: 20px;
   margin: 10px;
   border: brown;
   border-style: double;
+  border-width: 7px;
 }
 
-.para-container {
+.parallax-container {
   margin: 0;
   left: 0;
 }
@@ -39,10 +42,12 @@
   margin-bottom: 10px;
 }
 
+
 #gif-form {
   margin-top: 20px;
 }
 
 .scroll-banner {
   background-color: red;
+  text-align: center;
 }
