--- a/src/index.css
+++ b/src/index.css
@@ -25,6 +25,7 @@
   background: rgb(0,232,255);
   background: linear-gradient(155deg, rgba(0,232,255,0.5046219171262255) 0%, rgba(255,125,2,0.4962185557816877) 100%); 
 }
+
 .gif-img {
   padding: 20px;
   margin: 10px;
@@ -48,6 +49,15 @@
 }
 
 .scroll-banner {
-  background-color: red;
+  display: inline-flex;
+  border-radius: 20px;
+  padding: 12px;
+  background: rgb(129,255,77);
+  background: linear-gradient(45deg, rgba(129,255,77,0.5046219171262255) 0%, rgba(253,73,255,0.5018207966780462) 100%); 
   text-align: center;
+  position: relative;
+  z-index: 9999;
+  left: 50%;
+  transform: translateX(-50%);
+  top: 30%;
 }
