--- a/src/index.css
+++ b/src/index.css
@@ -39,7 +39,7 @@
   left: 0;
 }
 
-.gif-btn {
+.gif-btn, .options-btn {
   margin-bottom: 10px;
 }
 
@@ -56,7 +56,7 @@
   background: linear-gradient(45deg, rgba(129,255,77,0.5046219171262255) 0%, rgba(253,73,255,0.5018207966780462) 100%); 
   text-align: center;
   position: relative;
-  z-index: 9999;
+  z-index: 500;
   left: 50%;
   transform: translateX(-50%);
   top: 30%;
