option for num bubbles functional

--- a/src/index.css
+++ b/src/index.css
@@ -61,3 +61,8 @@
   transform: translateX(-50%);
   top: 30%;
 }
+
+/* .grayscale-radio {
+  background-color: brown;
+  display: inline-flex !important;
+} */
